[gd_scene format=3 uid="uid://du4u8ltc00vgh"]

[ext_resource type="Script" uid="uid://dq5a1jru0x5ly" path="res://RecordInspection.gd" id="1_ntoxg"]
[ext_resource type="Texture2D" uid="uid://uod61hx02oas" path="res://art/Backgrounds/Record_Inspection.png" id="2_5p5pq"]
[ext_resource type="Texture2D" uid="uid://i3u8yfn6577s" path="res://art/Assets/number_pad.png" id="4_fjgwx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntoxg"]
size = Vector2(900, 900)

[sub_resource type="CircleShape2D" id="CircleShape2D_ntoxg"]
radius = 450.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5p5pq"]
radius = 38.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfqqi"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjgwx"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3qi6"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awfoh"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvbv5"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2iatb"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugogd"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_obs2i"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xufd"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvx1g"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nmj4"]
size = Vector2(100, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o0yw"]
size = Vector2(100, 80)

[node name="RecordInspection" type="Control" unique_id=1591773006]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ntoxg")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=231455831]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" unique_id=1981130155]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_5p5pq")

[node name="BackButton" type="Button" parent="." unique_id=1686204046]
z_index = 1
layout_mode = 0
offset_top = 1030.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="RecordSleeve" type="Area2D" parent="." unique_id=1413312947]
z_index = 3
position = Vector2(490, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RecordSleeve" unique_id=58824304]
shape = SubResource("RectangleShape2D_ntoxg")

[node name="Sprite2D" type="Sprite2D" parent="RecordSleeve" unique_id=1910110571]
z_index = 3

[node name="Disc" type="Area2D" parent="." unique_id=1414560987]
z_index = 1
position = Vector2(950, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Disc" unique_id=1857503520]
shape = SubResource("CircleShape2D_ntoxg")

[node name="Sprite2D" type="Sprite2D" parent="Disc" unique_id=1173073807]

[node name="RunoutPivot" type="Node2D" parent="Disc" unique_id=1548081478]

[node name="RunoutLabel" type="Label" parent="Disc/RunoutPivot" unique_id=591752219]
z_index = 2
offset_right = 1.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sheen" type="Sprite2D" parent="." unique_id=1718360745]
z_index = 4
position = Vector2(1000, 540)

[node name="Sticker" type="Area2D" parent="." unique_id=372303162]
z_index = 4
position = Vector2(1540, 150)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sticker" unique_id=1102970492]
z_index = 4
shape = SubResource("CircleShape2D_5p5pq")

[node name="Sprite2D" type="Sprite2D" parent="Sticker" unique_id=1905137764]
z_index = 4

[node name="Label" type="Label" parent="Sticker" unique_id=1306993275]
z_index = 4
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -25.0
offset_right = 20.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NumberPad" type="Sprite2D" parent="." unique_id=1714289797]
position = Vector2(1677, 664)
texture = ExtResource("4_fjgwx")

[node name="Pad0" type="Area2D" parent="NumberPad" unique_id=786308932]
position = Vector2(0, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad0" unique_id=981868365]
shape = SubResource("RectangleShape2D_rfqqi")

[node name="Label" type="Label" parent="NumberPad/Pad0" unique_id=1740926629]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad1" type="Area2D" parent="NumberPad" unique_id=871878778]
position = Vector2(-131, 53)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad1" unique_id=931297746]
shape = SubResource("RectangleShape2D_fjgwx")

[node name="Label" type="Label" parent="NumberPad/Pad1" unique_id=1053448708]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad2" type="Area2D" parent="NumberPad" unique_id=1066807367]
position = Vector2(0, 54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad2" unique_id=1316289589]
shape = SubResource("RectangleShape2D_h3qi6")

[node name="Label" type="Label" parent="NumberPad/Pad2" unique_id=1533508368]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad3" type="Area2D" parent="NumberPad" unique_id=1283633965]
position = Vector2(127, 54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad3" unique_id=1736668247]
shape = SubResource("RectangleShape2D_awfoh")

[node name="Label" type="Label" parent="NumberPad/Pad3" unique_id=1127272124]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad4" type="Area2D" parent="NumberPad" unique_id=2040456652]
position = Vector2(-128, 157)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad4" unique_id=351432306]
shape = SubResource("RectangleShape2D_xvbv5")

[node name="Label" type="Label" parent="NumberPad/Pad4" unique_id=2034725168]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad5" type="Area2D" parent="NumberPad" unique_id=273834513]
position = Vector2(0, 158)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad5" unique_id=1311482788]
shape = SubResource("RectangleShape2D_2iatb")

[node name="Label" type="Label" parent="NumberPad/Pad5" unique_id=1721642478]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad6" type="Area2D" parent="NumberPad" unique_id=171476397]
position = Vector2(129, 159)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad6" unique_id=552246440]
shape = SubResource("RectangleShape2D_ugogd")

[node name="Label" type="Label" parent="NumberPad/Pad6" unique_id=1572440645]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad7" type="Area2D" parent="NumberPad" unique_id=1001427649]
position = Vector2(-132, 261)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad7" unique_id=1838547880]
shape = SubResource("RectangleShape2D_obs2i")

[node name="Label" type="Label" parent="NumberPad/Pad7" unique_id=1577294580]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad8" type="Area2D" parent="NumberPad" unique_id=1582008678]
position = Vector2(0, 259)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/Pad8" unique_id=48549303]
shape = SubResource("RectangleShape2D_3xufd")

[node name="Label" type="Label" parent="NumberPad/Pad8" unique_id=277054264]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pad9" type="Area2D" parent="NumberPad" unique_id=584976450]
position = Vector2(130, 260)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/pad9" unique_id=866062314]
shape = SubResource("RectangleShape2D_bvx1g")

[node name="Label" type="Label" parent="NumberPad/pad9" unique_id=2097291909]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PadPrint" type="Area2D" parent="NumberPad" unique_id=245057261]
position = Vector2(125, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/PadPrint" unique_id=1149831749]
shape = SubResource("RectangleShape2D_6nmj4")

[node name="Label" type="Label" parent="NumberPad/PadPrint" unique_id=696990332]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Print"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PadClear" type="Area2D" parent="NumberPad" unique_id=1959391956]
position = Vector2(-132, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NumberPad/PadClear" unique_id=1412240448]
shape = SubResource("RectangleShape2D_4o0yw")

[node name="Label" type="Label" parent="NumberPad/PadClear" unique_id=1618257328]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -11.5
offset_right = 20.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Clear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PadScreen" type="LineEdit" parent="NumberPad" unique_id=1315437310]
offset_left = -185.0
offset_top = -251.0
offset_right = 181.0
offset_bottom = -174.0
theme_override_font_sizes/font_size = 36
placeholder_text = "Enter Record Price"
alignment = 2
editable = false

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="input_event" from="RecordSleeve" to="." method="_on_record_sleeve_input_event"]
[connection signal="input_event" from="Disc" to="." method="_on_disc_input_event"]
[connection signal="input_event" from="Sticker" to="." method="_on_sticker_20_input_event"]
[connection signal="input_event" from="NumberPad/Pad0" to="." method="_on_pad_0_input_event"]
[connection signal="input_event" from="NumberPad/Pad1" to="." method="_on_pad_1_input_event"]
[connection signal="input_event" from="NumberPad/Pad2" to="." method="_on_pad_2_input_event"]
[connection signal="input_event" from="NumberPad/Pad3" to="." method="_on_pad_3_input_event"]
[connection signal="input_event" from="NumberPad/Pad4" to="." method="_on_pad_4_input_event"]
[connection signal="input_event" from="NumberPad/Pad5" to="." method="_on_pad_5_input_event"]
[connection signal="input_event" from="NumberPad/Pad6" to="." method="_on_pad_6_input_event"]
[connection signal="input_event" from="NumberPad/Pad7" to="." method="_on_pad_7_input_event"]
[connection signal="input_event" from="NumberPad/Pad8" to="." method="_on_pad_8_input_event"]
[connection signal="input_event" from="NumberPad/pad9" to="." method="_on_pad_9_input_event"]
[connection signal="input_event" from="NumberPad/PadPrint" to="." method="_on_pad_print_input_event"]
[connection signal="input_event" from="NumberPad/PadClear" to="." method="_on_pad_clear_input_event"]
